KL-123/feat : add getSubcategories method
SubcategoryService에 있는 getSubcategories함수를 CategoryService로 이동