@@ -1,7 +1,6 @@
 package taco.klkl.domain.category.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -10,6 +9,8 @@ import lombok.extern.slf4j.Slf4j;
 import taco.klkl.domain.category.dao.CategoryRepository;
 import taco.klkl.domain.category.domain.Category;
 import taco.klkl.domain.category.dto.response.CategoryResponseDto;
+import taco.klkl.domain.category.dto.response.CategoryWithSubcategoryDto;
+import taco.klkl.domain.category.exception.CategoryNotFoundException;
 
 @Slf4j
 @Service
@@ -21,6 +22,11 @@ public class CategoryService {
 		List<Category> categories = categoryRepository.findAll();
 		return categories.stream()
 			.map(category -> CategoryResponseDto.of(category.getId(), category.getName()))
-			.collect(Collectors.toList());
+			.toList();
+	}
+
+	public CategoryWithSubcategoryDto getSubcategories(Long id) {
+		Category category = categoryRepository.findById(id).orElseThrow(CategoryNotFoundException::new);
+		return CategoryWithSubcategoryDto.from(category);
 	}
 }
